--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
+cloud.name=emily0830
+cloud.secret=VDuwkqlBzkuVwMv1yTt-QyqA9_E
+cloud.key=355312414151518
+
 server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:mem:testdb
+gi
+
+
+
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.datasource.username=${JDBC_DATASOURCE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
